SimonStewart: Bumping up the amount of memory that the java process can use when compiling selenium
r16413