@@ -1,3 +1,3 @@
 @echo off
 
-java -client -jar third_party\jruby\jruby-complete.jar -X-C -S rake %*
+java -Xmx1024m -XX:MaxPermSize=256m -XX:ReservedCodeCacheSize=128m -client -jar third_party\jruby\jruby-complete.jar -X-C -S rake %*
